kubernetes/apps/openclaw/openclaw/config/http-route.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: openclaw
spec:
    parentRefs:
        - name: envoy-external
          namespace: network
          sectionName: https
    hostnames:
        - openclaw.aknuk.dev
    rules:
        - backendRefs:
            - name: openclaw
              port: 18789
sops:
    age:
        - recipient: age1nekqln4rq0mqqgv650u5a7zvgdeh472phq2ckl7ufzan04qlj90q3guut8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqYWx5TVpOa2NDV1NpNlMx
[...]
            0Iz0mODnEYacz8+WpDEZe3a/jYDZCjMelJfeI+brfXF2YIumKldpog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-03-20T16:18:00Z"
    mac: ENC[AES256_GCM,data:RFgimHrm3GB0Dh6CAnJs4lqAROHlfAy8MnixgH83tX/ydrKFBuGQTuf0V5gD1pdGe374na7CSf/W3zPMiKek8QaYUVjwt5dCFGTkpvgR5JKV/JUovGoCGSwhAFVKC+TB+pOFnea3oYmW8dtRtDOK4srUhwKDtmuHQGAD+sJArWw=,iv:+KQi04sNtD7DO00IxdDZ7j6ubFXzuOS/R8+OeQIqqRc=,tag:sDkjX7wBsDqSlRmkhNBULA==,type:str]
    encrypted_regex: ^(data|stringData)$
    mac_only_encrypted: true
    version: 3.12.1
